--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,35 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap");
 
-  @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Atomic+Age&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Bevan&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Rye&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Atomic+Age&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bevan&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rye&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playball&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap");
 
 *,
 *::before,
-*::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
-html{
-    box-sizing: border-box;
-    font-size: 62.5%;
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
 }
-body{
-    background-color: black;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    overflow-x: hidden;
+body {
+  background-color: black;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
-.layout{
-    // height: 200vh;
+.layout {
+  // height: 200vh;
 }
