--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,10 +1,8 @@
-@import 'base';
-@import 'header';
-@import 'about';
-@import 'curri';
-@import 'menu';
-@import 'card';
-@import 'projects';
-@import 'contact';
-
-
+@import "base";
+@import "header";
+@import "about";
+@import "curri";
+@import "menu";
+@import "card";
+@import "projects";
+@import "contact";
