--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,4 +5,7 @@
 @import "menu";
 @import "card";
 @import "projects";
-@import "contact";
+@import "envelope";
+@import "frame";
+@import "footer";
+@import "mug";
