--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -1,19 +1,19 @@
 .for {
   border: 30px solid transparent;
-  border-image: url(../border2e.png) 340;
+  border-image: url(../img/border2e.png) 340;
   color: black;
   height: 100%;
   width: 100%;
   &__title {
-    border: 20px solid transparent;
-    border-image: url(../border2e.png) 340;
+    border: 10px solid transparent;
+    border-image: url(../img/border2e.png) 340;
     font-family: "Abril Fatface", serif;
     text-align: center;
     font-size: 3rem;
   }
   &__items {
-    border: 20px solid transparent;
-    border-image: url(../border2e.png) 340;
+    border: 10px solid transparent;
+    border-image: url(../img/border2e.png) 340;
   }
   &__item {
     text-align: center;
@@ -39,7 +39,7 @@
 
 .exp {
   border: 30px solid orange;
-  border-image: url(../border4e.png) 110;
+  border-image: url(../img/border4e.png) 110;
   color: black;
   position: relative;
   height: 100%;
@@ -50,10 +50,18 @@
     font-family: "Bevan", serif;
     text-transform: uppercase;
     font-size: 5rem;
+    // @media screen and (max-width: 600px){
+    //   font-size: 3rem;
+    //   margin: 0;
+    // }
+    
   }
 
   &__img {
     position: absolute;
+    @media screen and (max-width: 600px){
+      display: none;
+    }
 
     bottom: -2rem;
     left: 35%;
@@ -63,6 +71,9 @@
     display: flex;
     font-family: "DM Serif Display", serif;
     gap: 2rem;
+    // @media screen and (max-width: 600px){
+    //   flex-direction: column;
+    // }
   }
   &__item {
     display: flex;
@@ -96,7 +107,7 @@
 
 .edu {
   border: 30px solid transparent;
-  border-image: url(../border3e.png) 140;
+  border-image: url(../img/border3e.png) 140;
   height: 100%;
   width: 100%;
   display: flex;
@@ -186,7 +197,7 @@
 
 .hob {
   border: 30px solid transparent;
-  border-image: url(../border1e.png) 140;
+  border-image: url(../img/border1e.png) 140;
   color: black;
   height: 100%;
   width: 100%;
