--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -1,13 +1,39 @@
 .projects {
-  background-color: rgb(122, 153, 144);
+  background-color: rgb(14, 15, 31);
+  background-image: url(../img/wall.jpg);
+  background-size: cover;
   color: white;
-  height: 650vh;
-  &__container {
-    position: sticky;
+  position: relative;
+  overflow: hidden;
+  &__back {
+    position: fixed;
+    left: 0;
     top: 0;
+    font-size: 5rem;
+    font-family: "DM Serif Display", serif;
+    text-transform: capitalize;
+    padding: 3rem;
     display: flex;
+    gap: 2rem;
     align-items: center;
-    height: 100vh;
+    color: rgb(255, 255, 255);
+    opacity: 0.5;
+    transition: all 0.4s;
+    cursor: pointer;
+    @media screen and (max-width: 550px){
+      font-size: 3rem ;
+
+    }
+    &__text {
+      font-size: 3rem;
+      @media screen and (max-width: 550px){
+        font-size: 2rem; 
+  
+      }
+    }
+    &:hover {
+      opacity: 1;
+    }
   }
 }
 .tvs {
@@ -16,9 +42,10 @@
 }
 
 .bor {
-  border: 2px solid bisque;
+  border: 2px solid rgb(80, 71, 61);
   height: 20rem;
   width: 30rem;
+  box-shadow: inset 0 0 30px black, 0 4px 3px black;
 
   background-color: rgb(212, 184, 117);
   padding: 1rem;
@@ -32,6 +59,7 @@
   align-items: center;
   background-color: gray;
   border-radius: 5px;
+  box-shadow: inset 0 0 30px black;
 }
 .screensq {
   border: 1px solid rgb(0, 0, 0);
@@ -52,6 +80,7 @@
   overflow: hidden;
   color: black;
   z-index: 20;
+  box-shadow: 0 0 30px rgb(183, 180, 221);
 }
 .screen2 {
   border-right: 2px solid currentColor;
@@ -59,11 +88,13 @@
   height: 100%;
   width: 100%;
 
-  background-color: bisque;
+  background-color: black;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0 0 30px rgb(183, 180, 221);
+
   border-radius: 40% 40% 40% 40%/ 150% 150% 150% 150%;
 }
 
@@ -212,27 +243,20 @@
 }
 
 .shelf {
-  width: 70vw;
+  margin: 0 2rem;
   height: 2rem;
   background-color: brown;
   box-shadow: inset 0 1px 30px rgba(0, 0, 0, 0.685), 5px 15px 30px rgb(0, 0, 0);
-  z-index: 100;
+  z-index: 10;
 }
 .project {
-  margin-left: 20rem;
-  // position: sticky;
-  // top: 0;
-  width: 100vw;
   &__item {
     display: flex;
-    align-items: flex-end;
-    perspective: 150rem;
+    flex-direction: column;
     justify-content: center;
-    gap: 5rem;
   }
   &__link-container {
     height: 100%;
-    width: 100%;
     position: relative;
   }
   &__pic {
@@ -251,7 +275,7 @@
     right: 0;
 
     z-index: 8;
-    color: transparent;
+    color: rgba(0, 0, 0, 0.123);
     background-image: radial-gradient(transparent, rgb(124, 122, 122));
     transition: all 0.5s;
     &:hover {
@@ -261,44 +285,75 @@
       }
     }
   }
+
+  &__shelf {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    perspective: 100rem;
+  }
+  &__img {
+    height: 100vh;
+    width: 100vw;
+    background-color: purple;
+    z-index: -10;
+
+    transform: translateY(-50vh) rotateX(70deg);
+  }
 }
 
 .board {
-  margin-bottom: 1px;
-  z-index: 0;
-  height: max-content;
-  width: 25rem;
-  font-family: "Love Ya Like A Sister", cursive;
-  transform: rotateX(10deg);
-  padding: 5px;
-
-  background-color: rgb(204, 181, 152);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 -1px 30px rgba(0, 0, 0, 0.685),
-    inset 0 1px 3px rgba(0, 0, 0, 0.685);
-  &__border {
-    padding: 1rem;
-    height: 100%;
-    width: 100%;
-    background-color: rgb(27, 27, 27);
-  }
-  &__title {
-    text-align: center;
-    font-size: 2rem;
-    padding: 2rem;
-  }
-
   &__tech {
+    font-family: "DM Serif Display", serif;
+
     display: flex;
-    // gap: 1rem;
     margin-bottom: 2rem;
     align-items: center;
-    font-size: 1.6rem;
+    font-size: 2rem;
+    gap: 2rem;
     justify-content: space-evenly;
+    @media screen and (max-width: 600px) {
+      font-size: 1.6rem;
+    }
     &__react {
       height: 5rem;
+      @media screen and (max-width: 600px) {
+        height: 3rem;
+      }
+    }
+  }
+}
+
+.proj {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  transform: translateY(15rem);
+  height: 20rem;
+
+  &__title {
+    font-family: "Cookie", cursive;
+    font-size: 5rem;
+    transition: all 0.4s;
+    @media screen and (max-width: 600px) {
+      font-size: 3rem;
+    }
+    &--load {
+      color: transparent;
+      opacity: 0;
+    }
+  }
+
+  &__techs {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    transition: all 0.7s;
+    &--load {
+      opacity: 0;
+      color: transparent;
     }
   }
 }
